--- a/bury-chess-club-website/package.json
+++ b/bury-chess-club-website/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-children-utilities": "^2.9.0",
     "react-dom": "^18.2.0",
+    "react-facebook": "^9.0.12",
     "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
